--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -4,34 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.WelcomeScreen">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/photo">
+    tools:context=".view.ui.WelcomeScreen"
+    android:background="#f0f0f0">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="700dp"
+            android:layout_height="525dp"
             android:layout_alignParentBottom="true"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:src="@drawable/img">
 
         </ImageView>
 
-    </RelativeLayout>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/nametagline">
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +36,7 @@
             android:fontFamily="@font/UbuntuBold"
             android:text="PLANTIFY"
             android:textColor="#1a3e1b"
-            android:textSize="35sp">
+            android:textSize="45sp">
 
         </TextView>
 
@@ -52,10 +48,35 @@
             android:fontFamily="@font/UbuntuBold"
             android:text="- IF NOT NOW, WHEN -"
             android:textColor="#1a3e1b"
-            android:textSize="17sp">
+            android:textSize="15sp">
 
         </TextView>
 
+        <Button
+            android:layout_width="179dp"
+            android:layout_height="43dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/buttonbackground"
+            android:text="LOG IN"
+            android:textSize="15sp"
+            android:fontFamily="@font/InterRegular">
+
+        </Button>
+
+        <Button
+            android:layout_width="179dp"
+            android:layout_height="43dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/buttonbackground"
+            android:text="SIGN UP"
+            android:textSize="15sp"
+            android:fontFamily="@font/InterRegular">
+
+        </Button>
+
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
