added sign in page front module

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,28 +7,6 @@
     tools:context=".view.auth.SignIn"
     android:background="@color/backgroundcolor">
 
-    <!--<androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:cardCornerRadius="200dp"
-        android:layout_marginTop="-250dp"
-        android:layout_marginLeft="-40dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/loginbg"
-            android:id="@+id/bg">
-
-        </ImageView>
-
-    </androidx.cardview.widget.CardView>-->
-
-    <!--</RelativeLayout>-->
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="500dp"
@@ -41,9 +19,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/loginbg">
+            android:src="@drawable/loginbg"
+            android:outlineProvider="background">
 
         </ImageView>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="290dp"
+        android:layout_height="580dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
     </androidx.cardview.widget.CardView>
 
